--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ authors = ["Wesley Long <46755903+WesleyL30@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pymongo = "^4.0.1"
+pymongo = {extras = ["srv"], version = "^4.0.2"}
 python-dotenv = "^0.19.2"
 streamlit = "^1.5.1"
+plotly = "^5.6.0"
+pandas = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
